Правки README.md, сделаны инструкции для работы с jdeps, jlink